#371 issue explore countries, fix truncate reference when larger than 2 lines

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -368,6 +368,7 @@ h1 + .lead {
 
 
 
+/*
 .trunkate {
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -377,6 +378,44 @@ h1 + .lead {
     min-height: 50px;
 
 }
+*/
+
+
+.trunkate span, .trunkate {
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+}
+
+.trunkate span:first-child:after,
+.trunkate span:last-child:after {
+    content: "...";
+    text-align: right;
+    /*position: absolute;*/
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    height: 1.2em;
+    max-height: 50px;
+    /*   background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%); */
+}
+
+/* Now add in code for the browsers that support -webkit-line-clamp and overwrite the non-supportive stuff */
+@supports (-webkit-line-clamp: 2) {
+    .trunkate {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+
+    .trunkate:after {
+        display: none;
+    }
+}
+
+
 
 
 /*
